[tool.poetry]
name = "prfiesta"
version = "0.0.1"
description = ""
authors = ["kiran94"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygithub = "^1.58.1"
click = "^8.1.3"
pandas = "^2.0.1"
pyarrow = "^11.0.0"
rich = "^13.3.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.263"
jupyterlab = "^3.6.3"
polars = "^0.17.10"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 160

# All Rules: https://beta.ruff.rs/docs/rules/
select = [
    "F",     # pyflakes
    "E",     # pycodestyle
    "C90",   # macabe complexity
    "I",     # isort
    "W",     # warning
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    # "ANN", # flake8-annotations
    "S",     # flake8-bandit
    "BLE",   # flake8-blind-except
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    # "DTZ", # flake8-datetimez
    "T10",   # flake8-debugger
    "DJ",    # flake8-django
    "EM",    # flake8-errmsg
    "EXE",   # flake8-executable
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "INP",   # flake8-no-pep420
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    # "SLF", # flake8-self
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "INT",   # flake8-gettext
    "ARG",   # flake8-unused-arguments
    # "PTH", # flake8-use-pathlib
    "ERA",   # eradicate
    "PD",    # pandas-vet
    "PGH",   # pygrep-hooks
    "PL",    # pylint
    "PLE",   # error
    "PLR",   # refactor
    "PLW",   # warning
    "NPY",   # numpy-specific-rules
    "RUF",   # ruff-specific-rules
]

ignore = [
    "S101", # asserts are used in unit tests
    "EM101", # not a big deal if the error message is duplicated in the traceback
]

[tool.ruff.flake8-quotes]
inline-quotes = "single"
