[project]
name = "prfiesta"
version = "0.14.0"
description = "Collect and Analyze Individual Contributor Pull Requests"
authors = [{ name = "kiran94" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = [ "pull-request", "pull-request-review", "performance-review" ]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Software Development",
    "Topic :: Software Development :: Version Control :: Git"
]
dependencies = [
    "pygithub>=1.58.1,<2.0.0",
    "click>=8.1.3,<9.0.0",
    "cloup>=2.1.0,<3.0.0",
    "pandas>=2.0.1,<3.0.0",
    "pyarrow>=18.1.0,<19.0.0",
    "rich>=13.3.5,<14.0.0",
    "seaborn>=0.12.2,<0.13.0",
    "matplotlib>=3.7.1,<4.0.0",
    "natural>=0.2.0,<0.3.0",
    "urllib3<2",
    "duckdb>=1.1.3,<2.0.0",
    "numpy<2",
]

[project.urls]
Homepage = "https://pypi.org/project/prfiesta/"
Repository = "https://github.com/kiran94/prfiesta"
Documentation = "https://github.com/kiran94/prfiesta/blob/main/README.md"

[project.scripts]
prfiesta = "prfiesta.__main__:main"

[dependency-groups]
dev = [
    "pytest>=7.3.1,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-github-actions-annotate-failures>=0.2.0,<0.3.0",
    "jupyterlab-widgets>=3.0.7,<4.0.0",
    "jupyter-black>=0.3.4,<0.4.0",
    "ipywidgets>=8.0.6,<9.0.0",
    "pre-commit>=3.3.2,<4.0.0",
    "ruff>=0.1.0,<0.2.0",
    "jupyterlab>=4.3.4,<5.0.0",
    "papermill>=2.6.0,<3.0.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "prfiesta"

[tool.ruff]
line-length = 160
target-version = "py38"

# All Rules: https://beta.ruff.rs/docs/rules/
select = [
    "F",     # pyflakes
    "E",     # pycodestyle
    "C90",   # macabe complexity
    "I",     # isort
    "W",     # warning
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "ANN",   # flake8-annotations
    "S",     # flake8-bandit
    "BLE",   # flake8-blind-except
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    # "DTZ", # flake8-datetimez
    "T10",   # flake8-debugger
    "DJ",    # flake8-django
    "EM",    # flake8-errmsg
    "EXE",   # flake8-executable
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "INP",   # flake8-no-pep420
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    # "SLF", # flake8-self
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "INT",   # flake8-gettext
    "ARG",   # flake8-unused-arguments
    # "PTH", # flake8-use-pathlib
    "ERA",   # eradicate
    "PD",    # pandas-vet
    "PGH",   # pygrep-hooks
    "PL",    # pylint
    "PLE",   # error
    "PLR",   # refactor
    "PLW",   # warning
    "NPY",   # numpy-specific-rules
    "RUF",   # ruff-specific-rules
]

ignore = [
    "S101",    # asserts are used in unit tests
    "EM101",   # not a big deal if the error message is duplicated in the traceback
    "ANN101",  # ignore missing type annotation on self
    "ANN003",  # ignore missing type annotations on **kwargs
    "PLR0913", # ignore for test cases with high level of paramtatization
    "COM812",  # disable to avoid conflict with formatter
    "ISC001",  # disable to avoid conflict with formatter
    "RET504",  # sometimes decreases code readability
]
